# Online-Shopping

./: .gitignore  README.md  README.txt  setup.cfg
Online-Shopping/: admin.py  admins.json  store.py
Online-Shopping/templates/auth/: login.html
Online-Shopping/templates/new_base/: style.css
instance/: admins.json  categories.json  config.py
online_shopping/: __init__.py  admin.py  api.py  categories.json  db.py  helpers.py  key.txt  store.py
online_shopping/static/: basicstyle.css  main.css  main.js
online_shopping/static/admin/: main.css  orders.js  products.js  quantities.js  warehouses.js
online_shopping/static/blog/: cart.js  cart_approve.js  product.js
online_shopping/templates/: base.html
online_shopping/templates/admin/: base.html  login.html  orders.html  products.html  quantities.html  warehouses.html
online_shopping/templates/blog/: base.html  cart.html  cart_approve.html  category.html  home.html  index.html  product.html  products.html  start.html
online_shopping/templates/new_base/: checkout.css  checkout.html  index.css  index.html  index.js  init.js  product.css  product.html  product.js  products.html
online_shopping/util/: filters.py  json_encoders.py
venv_shopping/: pyvenv.cfg
venv_shopping/Scripts/: activate  activate.bat
