[metadata]
name = Online-Shopping
version = 1.0.0
maintainer = mk-group6
maintainer_email = contact@palletsprojects.com
description = The basic blog app built in the Flask.
long_description = file: README.txt

[options]
packages = find:
include_package_data = true
install_requires =
    Flask
    psycopg2
    psycopg2-binary
    pymongo
    dnspython
    persiantools

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    Online-Shopping